[metadata]
name = pyrabola
version = 0.0.2
author = Ben Spiers
author_email = info@benspiers.co.uk
description = Simulate laser propagation through a system of planar and focussing mirrors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unpairedbracket/pyrabola
project_urls =
    Bug Tracker = https://github.com/unpairedbracket/pyrabola/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    matplotlib

[options.packages.find]
where = src
